# vlnr

./: .coverage  .gitignore  AGENTS.md  LICENSE  README.md  VLNR_METHODOLOGY_UPGRADE_PLAN.md  finder_spec.md  justfile  llm_config.yaml  pyproject.toml  vlnr_spec.md
scripts/: benchmark_triage.py  mock_benchmark_results.json
tests/: conftest.py  ground_truth.json  test_agent_e2e_dry.py  test_agent_feedback.py  test_agent_out_dir_param.py  test_agent_state.py  test_agent_state_candidate_pool.py  test_batch_triage.py  test_bypass_scan.py  test_cli_entry.py  test_decide_action_prompt.py  test_discovery_llm.py  test_external_slicing.py  test_filters.py  test_github.py  test_integration.py  test_legacy_shims.py  test_llm.py  test_metadata_scan.py  test_osv.py  test_phase3.py  test_popularity_discovery.py  test_pypi.py  test_run_orchestrator.py  test_run_scan_helper.py  test_scorer.py  test_triage.py  test_triage_llm.py  test_validate.py  test_vex.py  test_vuln_ast.py  test_vuln_cli_logic.py  test_vuln_entrypoints.py  test_vuln_fetch.py  test_vuln_refinement.py
tests/cassettes/: test_batch_triage.yaml  test_llm_completion.yaml  test_simple_completion.yaml  test_tier_routing.yaml  test_triage_batch.yaml  test_triage_llm_integration.yaml
tests/data/: ground_truth_slices.jsonl
tests/fixtures/: sample_pypi.jsonl
tests/fixtures/run_orchestrator/: candidates.json
tests/fixtures/run_orchestrator/findings/: pkg-a-findings.json  pkg-a-slices.jsonl  pkg-b-findings.json
vlnr/: __main__.py  _legacy.py  agent.py  agent_models.py  cli.py  data.py  filters.py  github.py  llm.py  models.py  osv.py  pypi.py  scorer.py  triage.py  vex.py  vuln_ast.py  vuln_cli.py  vuln_entrypoints.py  vuln_fetch.py  vuln_heuristics.py  vuln_metadata.py  vuln_models.py  vuln_reasoner.py  vuln_scorer.py  vuln_slice.py  vuln_validate.py
vlnr/rules/: ssrf.yaml
